# stepcast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  colab_guide.md  index.html  index.md  pyproject.toml  quickstart.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
docs/: api_reference.md  dashboard.md  gemini_narration.md
examples/: ai_pipeline.py  api_client.py  basic_pipeline.py  data_etl.py  ml_training.py
stepcast/: __init__.py  __main__.py  cli.py  config.py  display.py  exceptions.py  i18n.py  models.py  pipeline.py  runner.py  step.py  utils.py
stepcast/dashboard/: __init__.py  auth.py  router.py  server.py  storage.py  ws.py
stepcast/dashboard/static/: app.js  index.html  style.css
stepcast/integrations/: __init__.py  ai_step.py  colab.py  db_step.py  gemini.py  http_step.py  rich_display.py
stepcast/locales/: en.json
tests/: conftest.py  test_async_pipeline.py  test_async_runner.py  test_cli.py  test_config.py  test_dashboard.py  test_display.py  test_models.py  test_pipeline.py  test_runner.py  test_step.py
tests/integrations/: test_colab.py  test_gemini.py  test_rich.py
